# get-rusty

./: .env  .gitignore  Cargo.toml  README.md  todo_project.md
old_projects/: Cargo.toml  thunder-collection_Rust REST.json
old_projects/migrations/: 20241013140451_create_books_table.sql
old_projects/proto/: helloworld.proto
old_projects/src/: handlers.rs  lib.rs  models.rs  server.rs
src/: .env  db.rs  grpc-client.rs  main.rs  models.rs  proto.rs  server.rs
the_bok_projects/borrowing/src/: main.rs
the_bok_projects/guessing_game/src/: main.rs
the_bok_projects/minigrep/src/: lib.rs  main.rs
