[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls"] }
tokio = { version = "1", features = ["full"] }
